<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.b2international.snowowl</groupId>
	<artifactId>snowowl-parent</artifactId>
	<version>9.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<!-- Dependency versions for Tycho's target platform filter -->
		<elk.version>0.4.3</elk.version>
		<groovy.version>3.0.9</groovy.version>
		<guava.versionRange>[30.1.0,30.1.1)</guava.versionRange>
		<jackson.version>2.14.2</jackson.version>
		<logback.versionRange>[1.2.10,1.2.11)</logback.versionRange>
		<osgi.versionRange>[3.16.0,3.17.1)</osgi.versionRange>
		<slf4j.version>1.7.32</slf4j.version>
		
		<!-- Build tool/compiler versions -->
		<tycho.version>2.6.0</tycho.version>
		<tycho-extras.version>2.6.0</tycho-extras.version>
		<jacoco.version>0.8.7</jacoco.version>
		
		<!-- Versioning -->
		<maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
		<forceContextQualifier>${maven.build.timestamp}</forceContextQualifier>
		
		<!-- Testing -->
		<testHeapSize>1g</testHeapSize>
		<testArgLine>${tycho.testArgLine} -Xms${testHeapSize} -Xmx${testHeapSize} -Dosgi.classloader.type=nonparallel -Djetty.home.bundle=org.eclipse.jetty.osgi.boot -Djetty.http.port=9090 -XX:+AlwaysPreTouch --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.time=ALL-UNNAMED --add-opens java.base/sun.security.x509=ALL-UNNAMED -Dlogback.configurationFile=${basedir}/src/configuration/logback-maven.xml</testArgLine>

		<!-- Artifact distribution -->
		<maven.repository.id>nexus_deployment</maven.repository.id>
		<maven.releases.repository>https://nexus.b2i.sg/repository/maven-releases</maven.releases.repository>
		<maven.snapshots.repository>https://nexus.b2i.sg/repository/maven-snapshots</maven.snapshots.repository>

	</properties>

	<modules>
		<module>commons</module>
		<module>core</module>
		<module>fhir</module>
		<module>netty</module>
		<module>snomed</module>
		<module>cis</module>
		<module>tests</module>
		<module>releng</module>
		<module>dist</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<configuration>
					<strictBinIncludes>false</strictBinIncludes>
					<strictVersions>false</strictVersions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho.version}</version>
				<executions>
					<execution>
						<id>plugin-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<resolver>p2</resolver>
					<executionEnvironment>org.eclipse.justj.openjdk.hotspot.jre.full-17</executionEnvironment>
					<target>
						<artifact>
							<groupId>${project.groupId}</groupId>
							<artifactId>target-platform</artifactId>
							<version>${project.version}</version>
						</artifact>
					</target>
					<filters>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.eclipse.osgi</id>
							<restrictTo>
								<versionRange>${osgi.versionRange}</versionRange>
							</restrictTo>
						</filter>
						<!-- work around Equinox bug 348045 -->
						<!-- Removes the extension bundle from the available bundles for the 
							javax.servlet package -->
						<filter>
							<type>p2-installable-unit</type>
							<id>org.eclipse.equinox.servletbridge.extensionbundle</id>
							<removeAll />
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>org.codehaus.groovy</id>
							<restrictTo>
								<versionRange>${groovy.version}</versionRange>
							</restrictTo>
						</filter>
						<filter>
							<type>eclipse-plugin</type>
							<id>com.google.guava</id>
							<restrictTo>
								<versionRange>${guava.versionRange}</versionRange>
							</restrictTo>
						</filter>
						<!-- Restrict SLF4J version -->
						<filter>
							<type>p2-installable-unit</type>
							<id>slf4j.api</id>
							<restrictTo>
								<versionRange>${slf4j.version}</versionRange>
							</restrictTo>
						</filter>
						<filter>
							<type>p2-installable-unit</type>
							<id>ch.qos.logback.classic</id>
							<restrictTo>
								<versionRange>${logback.versionRange}</versionRange>
							</restrictTo>
						</filter>
						<filter>
							<type>p2-installable-unit</type>
							<id>ch.qos.logback.core</id>
							<restrictTo>
								<versionRange>${logback.versionRange}</versionRange>
							</restrictTo>
						</filter>
						<!-- Restrict Jackson bundles to the selected version -->
						<filter>
							<type>p2-installable-unit</type>
							<id>com.fasterxml.jackson.core.jackson-annotations</id>
							<restrictTo>
								<version>${jackson.version}</version>
							</restrictTo>
						</filter>
						<filter>
							<type>p2-installable-unit</type>
							<id>com.fasterxml.jackson.core.jackson-core</id>
							<restrictTo>
								<version>${jackson.version}</version>
							</restrictTo>
						</filter>
						<filter>
							<type>p2-installable-unit</type>
							<id>com.fasterxml.jackson.core.jackson-databind</id>
							<restrictTo>
								<version>${jackson.version}</version>
							</restrictTo>
						</filter>
						<filter>
							<type>p2-installable-unit</type>
							<id>com.fasterxml.jackson.dataformat.jackson-dataformat-yaml</id>
							<restrictTo>
								<version>${jackson.version}</version>
							</restrictTo>
						</filter>
						<filter>
							<type>p2-installable-unit</type>
							<id>com.fasterxml.jackson.dataformat.jackson-dataformat-cbor</id>
							<restrictTo>
								<version>${jackson.version}</version>
							</restrictTo>
						</filter>
						<filter>
							<type>p2-installable-unit</type>
							<id>com.fasterxml.jackson.dataformat.jackson-dataformat-csv</id>
							<restrictTo>
								<version>${jackson.version}</version>
							</restrictTo>
						</filter>
						<filter>
							<type>p2-installable-unit</type>
							<id>com.fasterxml.jackson.dataformat.jackson-dataformat-xml</id>
							<restrictTo>
								<version>${jackson.version}</version>
							</restrictTo>
						</filter>
						<filter>
							<type>p2-installable-unit</type>
							<id>com.fasterxml.jackson.dataformat.jackson-dataformat-afterburner</id>
							<restrictTo>
								<version>${jackson.version}</version>
							</restrictTo>
						</filter>
						<filter>
							<type>p2-installable-unit</type>
							<id>org.slf4j.api</id>
							<removeAll />
						</filter>
					</filters>
					<environments>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<excludes>
						<exclude>com/b2international/snowowl/snomed/etl/parser/**/*</exclude>
						<exclude>com/b2international/snowowl/snomed/ql/parser/**/*</exclude>
						<exclude>com/b2international/snowowl/snomed/scg/parser/**/*</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-director-plugin</artifactId>
					<version>${tycho.version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-publisher-plugin</artifactId>
					<version>${tycho.version}</version>
					<configuration>
						<publishArtifacts>true</publishArtifacts>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-versions-plugin</artifactId>
					<version>${tycho.version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho.version}</version>
					<configuration>
						<useProjectSettings>false</useProjectSettings>
						<release>17</release>
						<excludeResources>
							<excludeResource>**/*.groovy</excludeResource>
							<excludeResource>**/*.xtend</excludeResource>
						</excludeResources>
					</configuration>
				</plugin>
				<!-- Maven compiler plugin definition needed for Groovy compiler -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<release>17</release>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho.version}</version>
					<configuration>
						<useUIThread>false</useUIThread>
						<failIfNoTests>false</failIfNoTests>
						<trimStackTrace>false</trimStackTrace>
						<argLine>${testArgLine}</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-packaging-plugin</artifactId>
					<version>${tycho.version}</version>
					<dependencies>
						<dependency>
							<groupId>org.eclipse.tycho.extras</groupId>
							<artifactId>tycho-buildtimestamp-jgit</artifactId>
							<version>${tycho-extras.version}</version>
						</dependency>
					</dependencies>
					<configuration>
						<timestampProvider>jgit</timestampProvider>
						<jgit.ignore>pom.xml</jgit.ignore>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-repository-plugin</artifactId>
					<version>${tycho.version}</version>
					<configuration>
						<includeAllDependencies>true</includeAllDependencies>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.3</version>
				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>3.1.1</version>
					<configuration>
						<installAtEnd>true</installAtEnd>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.1.1</version>
					<configuration>
						<deployAtEnd>true</deployAtEnd>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<!-- 
			Repositories defined here should allow resolving zipped update sites with an mvn: URL in the
			target platform definition, ie. the ECL, ETL and SCG features. All other sources are now 
			referenced directly in the TP file. 
		-->
		<repository>
			<id>b2i-releases</id>
			<url>https://nexus.b2i.sg/repository/maven-releases</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>b2i-snapshots</id>
			<url>https://nexus.b2i.sg/repository/maven-snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</snapshots>
		</repository>
	</repositories>
			
	<distributionManagement>
		<repository>
			<id>${maven.repository.id}</id>
			<url>${maven.releases.repository}</url>
		</repository>
		<snapshotRepository>
			<id>${maven.repository.id}</id>
			<url>${maven.snapshots.repository}</url>
		</snapshotRepository>
	</distributionManagement>

	<scm>
		<url>https://github.com/b2ihealthcare/snow-owl</url>
		<connection>scm:git:ssh://github.com/b2ihealthcare/snow-owl.git</connection>
		<developerConnection>scm:git:ssh@github.com:b2ihealthcare/snow-owl.git</developerConnection>
	</scm>
	
</project>
